# bulksms

./: .gitlab-ci.yml  CHANGELOG.md  LICENSE.rst  README.rst  pyproject.toml
.github/workflows/: python-package.yml
src/bulksms/: __init__.py  api.py  main.py  test_api.py  utils.py
src/bulksms/docs/: requirements_test.txt
src/docs/: requirements_test.txt
